--- a/Listas_Doblemente_Enlazadas/reconocimiento_visual/requirements.txt
+++ b/Listas_Doblemente_Enlazadas/reconocimiento_visual/requirements.txt
@@ -1,5 +1,5 @@
-matplotlib==3.5.1
-numpy==1.22.0
-Pillow==9.4.0
+keras==2.12.0
+matplotlib==3.5.2
+numpy==1.22.2
+Pillow==9.5.0
 tensorflow==2.12.0
-tensorflow_intel==2.12.0
